--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
       - run:
           name: Run Playbook and Configure server
           command: |
-            ansible-playbook -i inventory main-remote.yml
+            ansible-playbook main-remote.yml -i inventory
 workflows:
   configure_infrastructure_workflow:
     jobs:
