--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,8 @@ jobs:
       - checkout
       - add_ssh_keys:
               # You can get this ID in the section where you registered the SSH Key
-              fingerprints: ["3b:9d:bc:d4:0d:a0:07:ca:03:e3:e5:b4:a1:39:a0:fd"] 
+              fingerprints: ["d9:f7:b0:a8:7c:a4:d8:82:ef:9f:6f:53:4d:3b:f9:b6"]
+"] 
       - run:
           name: Install Ansible
           command: |
