--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,31 @@ version: 2.1
 
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
+commands:
+   # Exercise - Rollback
+   destroy_environment:
+     steps:
+       - run:
+           name: Destroy environment
+           # ${CIRCLE_WORKFLOW_ID} is a Built-in environment variable 
+           # ${CIRCLE_WORKFLOW_ID:0:5} takes the first 5 chars of the variable CIRCLE_CI_WORKFLOW_ID 
+           when: on_fail
+           command: |
+             aws cloudformation delete-stack --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:7}
+
 jobs:
+  create_infrastructure: 
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run:
+          name: Create Cloudformation Stack
+          command: |
+            aws cloudformation deploy \
+              --template-file template.yml \
+              --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:7} \
+              --region us-east-1
   configure_infrastructure: 
     docker:
       - image: python:3.7-alpine3.11
@@ -30,17 +54,12 @@ jobs:
       - run: apk add --update curl
       - run:
           name: smoke test
-          command: |
-            URL="https://blog.udacity.hot"
-            if curl -s --head ${URL}
-            then
-              return 0
-            else
-              return 1
-            fi
+          command: return 1
+      - destroy_environment
 
 workflows:
   configure_infrastructure_workflow:
     jobs:
       #- configure_infrastructure
+      - create_infrastructure
       - smoke-test
