--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,7 @@ jobs:
             ansible-playbook -vvv -i inventory main-remote.yml
   smoke-test:
     docker:
-      - image: alpine:latest
+      - image: amazon/aws-cli
     steps:
       - run: apk add --update curl
       - run:
@@ -62,6 +62,6 @@ workflows:
     jobs:
       #- configure_infrastructure
       - smoke-test
-      - create_infrastructure
+      #- create_infrastructure
 
       
