--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ commands:
            # ${CIRCLE_WORKFLOW_ID:0:5} takes the first 5 chars of the variable CIRCLE_CI_WORKFLOW_ID 
            when: on_fail
            command: |
-             aws cloudformation --region us-east-1 delete-stack --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:7}
+             aws cloudformation --region us-east-1 delete-stack --stack-name myStack-test
 
 jobs:
   create_infrastructure: 
@@ -28,7 +28,7 @@ jobs:
           command: |
             aws cloudformation deploy \
               --template-file template.yml \
-              --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:7} \
+              --stack-name myStack-test \
               --region us-east-1
   configure_infrastructure: 
     docker:
@@ -61,7 +61,7 @@ workflows:
   configure_infrastructure_workflow:
     jobs:
       #- configure_infrastructure
-      - smoke-test
-      #- create_infrastructure
+      # smoke-test
+      - create_infrastructure
 
       
