--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,7 +61,7 @@ workflows:
   configure_infrastructure_workflow:
     jobs:
       #- configure_infrastructure
-      # smoke-test
-      - create_infrastructure
+      - smoke-test
+      # create_infrastructure
 
       
